--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <body>
         <div class="container">
-            <div class="background">
+            <!--<div class="background">
                 <img src="images/meeee.jpg" alt="George in a Sunflower Field">
-            </div>             
+            </div>   -->           
             <div class="nav">
                 <ul class="title">
                     <li class="current"><a href="index.html"><h1>george hawk</h1></a>
@@ -49,7 +49,13 @@
             </div>
             
             <div class="greeting">
-                <h2>hello</h2>
+                <div class="opening">
+                    <h2>Welcome to my website!</h2>
+                </div>
+                <div class="message">
+                    <h3>This is a place for me to show a few of the projects I have done as well as display art I've created
+                    and some art created by my students. Feel free to look around and if you have any questions or comments, please reach out! </h3>
+                </div>
             </div>
             
             <div class="footer">
