--- a/studentart.html
+++ b/studentart.html
@@ -76,8 +76,8 @@
                 </ul>
                 <ul class="row5">
                     <li class="art-size"><img src="sart/sart17.jpg" alt="Face String Art"></li>
-                    <li class="art-size"><img src="sart/sart18.jpeg" alt="Face String Art"></li>
-                    <li class="art-size"><img src="sart/sart19.jpeg" alt="Face String Art"></li>
+                    <li class="art-size"><img src="sart/sart18.jpg" alt="Face String Art"></li>
+                    <li class="art-size"><img src="sart/sart19.jpg" alt="Face String Art"></li>
                     <li class="art-size"><img src="sart/sart20.jpg" alt="Face String Art"></li>
                 </ul>
             </div>
