--- a/art.html
+++ b/art.html
@@ -9,9 +9,9 @@
     
     <body>
         <div class="container">
-            <div class="background">
+            <!-- <div class="background">
                 <img src="images/shadow.jpg" alt="George in a Sunflower Field">
-            </div>  
+            </div>   -->
             <div class="nav">
                 <ul class="title">
                     <li class="static"><a href="index.html"><h1>george hawk</h1></a>
