--- a/art.html
+++ b/art.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta name="viewport" content="width=device-width, initital-scale=1">
         <title>George's Website</title>
         <link rel="stylesheet" href="custom.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
