--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <body>
         <div class="container">
-            <!--<div class="background">
+            <div class="background">
                 <img src="images/meeee.jpg" alt="George in a Sunflower Field">
-            </div>   -->           
+            </div>         
             <div class="nav">
                 <ul class="title">
                     <li class="current"><a href="index.html"><h1>george hawk</h1></a>
