--- a/me.html
+++ b/me.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta name="viewport" content="width=device-width, initital-scale=1">
         <title>George's Website</title>
         <link rel="stylesheet" href="custom.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -9,7 +11,7 @@
     
     <body>            
         <div class="biopic">
-               <img src="images/face2.jpg" alt="George in a Sunflower Field">
+               <img src="images/pomface5.png" alt="George in a Sunflower Field">
         </div>
         <div class="container">
             <div class="nav">
