--- a/contactme.html
+++ b/contactme.html
@@ -9,7 +9,7 @@
     
     <body>
         <div class="background">
-            <img src="images/pic6.jpg" alt="George in a Sunflower Field">
+            <img src="images/pic6.JPG" alt="George in a Sunflower Field">
         </div>
         <div class="container">              
             <div class="nav">
