--- a/me.html
+++ b/me.html
@@ -11,7 +11,7 @@
     
     <body>
         <div class="background">
-            <img src="images/pic6.jpg" alt="George in a Sunflower Field">
+            <img src="images/pic6.JPG" alt="George in a Sunflower Field">
         </div>
         <div class="biopic">
                <img src="images/pomface5.png" alt="George in a Sunflower Field">
