--- a/studentart.html
+++ b/studentart.html
@@ -11,7 +11,7 @@
     
     <body>
         <div class="background">
-            <img src="images/pic5.jpg" alt="George in a Sunflower Field">
+            <img src="images/pic5.JPG" alt="George in a Sunflower Field">
         </div>
         <div class="container">
             <!--
