--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
             
             <div class="greeting">
                 <div class="opening">
-                    <h2>Welcome to my website!</h2>
+                    <h2>hi there :)</h2>
                 </div>
                 <div class="message">
-                    <h3>This is a place for me to show a few of the projects I have done as well as display art I've created
-                    and some art created by my students. Feel free to look around and if you have any questions or comments, please reach out! </h3>
+                    <h3>this is a place for me to show some art and say a little about myself. feel free to look around and if you have any questions or comments, please reach out! </h3>
                 </div>
             </div>
             
