--- a/me.html
+++ b/me.html
@@ -54,10 +54,9 @@
             </div>
             <div class="bio">
                 <div class="biowords">
-                    <h2>Hi there! My name is George Hawk (he/him/his) and I am currently a math teacher at St. Isidore school in Danville, CA.
-                    As a graduate from Oberlin College with majors in Mathematics and Computer Science, not only do I enjoy teaching math, but I enjoy using math to create programs.
-                    One of my favorite ways to do this is by making art using programs. Some of the math art that I have made can be found on the art page of this website, and some of the math art that my students have made can be found here as well.
-                    When I'm not programming, I also enjoy playing ultimate frisbee. </h2>
+                    <h2>my name is George Hawk (he/him/his). after graduatuating from Oberlin College with majors in Mathematics and Computer Science, i taught math for a year at St. Isidore School in Danville, CA. one way I love to combine
+                    my majors as well as my love for art is by creating programs that produce math art. some of the art i've made as well as some art i
+                    facilitated my students in making can be found on this website. i also love music, ultimate frisbee, and being part of the lgbtqia+ community. if you have any questions or comments, please don't hesitate to reach out :) </h2>
                 </div>
             </div>
 
