--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             
             <div class="greeting">
                 <div class="opening">
-                    <h2>hi there :)</h2>
+                    <h2>hi friend :)</h2>
                 </div>
                 <div class="message">
                     <h3>this is a place for me to show some art and say a little about myself. feel free to look around and if you have any questions or comments, please reach out! </h3>
