--- a/me.html
+++ b/me.html
@@ -55,7 +55,7 @@
             <div class="bio">
                 <div class="biowords">
                     <h2>My name is George Hawk (he/him/his). After graduatuating from Oberlin College with majors in Mathematics and Computer Science, I taught math for a year at St. Isidore School in Danville, CA. One way I love to combine
-                    my majors as well as my love for art is by creating programs that produce math art. some of the art I've made as well as some art I
+                    my majors as well as my love for art is by creating programs that produce math art. Some of the art I've made as well as some art I
                     facilitated my students in making can be found on this website. I also love music, ultimate frisbee, and being part of the LGBTQIA+ community. If you have any questions or comments, please don't hesitate to reach out :) </h2>
                 </div>
             </div>
